<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/login_text_view"
        android:text="@string/login_screen_title"
        android:textSize="26sp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/username_edit_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/username_image_view"
        android:contentDescription="@string/username_image_view_description"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="5dp"
        app:layout_constraintTop_toBottomOf="@id/login_text_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:srcCompat="@drawable/person" />

    <EditText
        android:id="@+id/username_edit_text"
        android:hint="@string/username_hint"
        android:autofillHints="username"
        android:inputType="text"
        android:layout_height="48dp"
        android:layout_width="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/username_image_view"
        app:layout_constraintTop_toTopOf="@id/username_image_view"
        app:layout_constraintBottom_toBottomOf="@id/username_image_view" />

    <ImageView
        android:id="@+id/password_image_view"
        android:contentDescription="@string/password_image_view_description"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_edit_text"
        app:srcCompat="@drawable/key" />

    <EditText
        android:id="@+id/password_edit_text"
        android:hint="@string/password_hint"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:layout_height="48dp"
        android:layout_width="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/password_image_view"
        app:layout_constraintTop_toTopOf="@id/password_image_view"
        app:layout_constraintBottom_toBottomOf="@id/password_image_view" />

    <Button
        android:id="@+id/login_button"
        android:text="@string/login_button_text"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginRight="80dp"
        app:layout_constraintTop_toBottomOf="@id/password_edit_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/password_edit_text"
        android:onClick="login" />

    <Button
        android:id="@+id/register_button"
        android:text="@string/register_button_text"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="80dp"
        app:layout_constraintTop_toBottomOf="@id/password_edit_text"
        app:layout_constraintLeft_toLeftOf="@id/password_edit_text"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="register" />

    <TextView
        android:id="@+id/login_error_text_view"
        android:text="@string/login_error_text"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/login_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/username_taken_error_text_view"
        android:text="@string/username_taken_error_text"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/login_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/username_length_error_text_view"
        android:text="@string/username_length_error_text"
        android:textColor="@color/design_default_color_error"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/login_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/password_length_error_text_view"
        android:text="@string/password_length_error_text"
        android:textColor="@color/design_default_color_error"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/login_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/field_length_error_text_view"
        android:text="@string/field_length_error_text"
        android:textColor="@color/design_default_color_error"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/login_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>