<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OptionsActivity">

    <TextView
        android:id="@+id/options_text_view"
        android:text="@string/options_text"
        android:textSize="26sp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/allow_sms_button"
        android:text="@string/allow_sms_button_text"
        android:padding="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/options_text_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="allowSms"/>

    <TextView
        android:id="@+id/goal_type_text_view"
        android:text="@string/goal_type_radio_group_label"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/allow_sms_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <RadioGroup
        android:id="@+id/goal_type_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/goal_type_text_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" >

        <RadioButton android:id="@+id/radio_loose_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loose_weight_text"
            android:onClick="changeGoalType" />

        <RadioButton android:id="@+id/radio_gain_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gain_weight_text"
            android:onClick="changeGoalType" />
    </RadioGroup>

    <TextView
        android:id="@+id/new_goal_weight_text_view"
        android:text="@string/new_goal_weight_text"
        android:textSize="18sp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toLeftOf="@id/goal_weight_edit_text"
        app:layout_constraintTop_toBottomOf="@id/goal_type_radio_group" />

    <EditText
        android:id="@+id/goal_weight_edit_text"
        android:hint="@string/enter_weight_hint"
        android:inputType="number"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        app:layout_constraintBaseline_toBaselineOf="@id/new_goal_weight_text_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="Autofill,TextContrastCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/set_goal_weight_button"
        android:text="@string/set_weight_button_text"
        android:padding="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toTopOf="@id/goal_weight_edit_text"
        app:layout_constraintBottom_toBottomOf="@id/goal_weight_edit_text"
        app:layout_constraintLeft_toRightOf="@id/goal_weight_edit_text"
        android:onClick="setGoalWeight"/>

    <TextView
        android:id="@+id/goal_weight_format_error_text_view"
        android:text="@string/goal_weight_format_error_text"
        android:textColor="@color/design_default_color_error"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/goal_weight_edit_text" />

</androidx.constraintlayout.widget.ConstraintLayout>