<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogWeightActivity">

    <TextView
        android:id="@+id/log_weight_text_view"
        android:text="@string/log_weight_text"
        android:textSize="26sp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/new_weight_text_view"
        android:text="@string/new_weight_text"
        android:textSize="18sp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toLeftOf="@id/enter_weight_edit_text"
        app:layout_constraintTop_toBottomOf="@id/log_weight_text_view" />

    <EditText
        android:id="@+id/enter_weight_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:hint="@string/enter_weight_hint"
        android:inputType="number"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@id/new_weight_text_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="Autofill,TextContrastCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/set_weight_button"
        android:text="@string/set_weight_button_text"
        android:padding="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toTopOf="@id/enter_weight_edit_text"
        app:layout_constraintBottom_toBottomOf="@id/enter_weight_edit_text"
        app:layout_constraintLeft_toRightOf="@id/enter_weight_edit_text"
        android:onClick="setWeight"/>

    <TextView
        android:id="@+id/format_error_text_view"
        android:text="@string/format_error_text"
        android:textColor="@color/design_default_color_error"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/set_weight_button" />

</androidx.constraintlayout.widget.ConstraintLayout>